syntax = "proto3";
// using proto3 language version 

package log_service;
// naming the package to avoid collision when importing this file

//Defining the message sent from client to server
message UploadRequest {
  string log_data = 1;      
  string client_id = 2;     
}

//Message returned from server to client 
message UploadResponse {
  bool success = 1;   // default is false btw      
  string message = 2;       
}

//service definition , AKA the remote procedures that clients can call on this server
service LogUploader {
  rpc UploadLog (UploadRequest) returns (UploadResponse) {}
}